--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile project(':SlidingMenuLibrary')
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
 }
