--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.bustacallfordriver">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".AppController"
@@ -14,17 +14,16 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".view.Activity_Splash">
-
-        </activity>
-        <activity android:name=".view.Activity_Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.Activity_Login"></activity>
         <activity android:name=".view.Activity_Signin" />
-        <activity android:name=".view.Activity_Main" />
+        <activity android:name=".view.Activity_Main"/>
         <activity android:name=".view.Activity_Notice" />
+        <activity android:name=".view.Activity_RentalDetail"/>
     </application>
 
 
