--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".AppController"
@@ -34,6 +35,7 @@
         <activity android:name=".view.Activity_Sliding_Inquiry"/>
         <activity android:name=".view.Activity_Sliding_Setting"/>
 
+        <activity android:name=".view.Activity_Booked_UserInfo"/>
 
         <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
